--- a/app/src/main/res/layout/activity_user__info.xml
+++ b/app/src/main/res/layout/activity_user__info.xml
@@ -23,7 +23,7 @@
             android:layout_alignParentStart="true" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -36,12 +36,25 @@
         android:paddingLeft="15dp"
         android:paddingRight="10dp">
 
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="头像"
+            android:id="@+id/textView"
+            android:textSize="16dp"
+            android:layout_weight="1"
+            android:gravity="left|center_vertical" />
+
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/imageView9"
-            android:layout_marginLeft="50dp"
-            android:src="@drawable/favicon" />
+            android:id="@+id/favicon"
+            android:gravity="center_horizontal"
+            android:layout_marginRight="20dp" />
+
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
@@ -50,7 +63,7 @@
             android:layout_alignBottom="@+id/imageView9"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
-    </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
