--- a/app/src/main/res/layout/activity_home__page.xml
+++ b/app/src/main/res/layout/activity_home__page.xml
@@ -45,6 +45,18 @@
             android:layout_marginTop="65dp" />
     </RelativeLayout>
 
+    
+
+
+    <Button
+        android:layout_width="55dp"
+        android:layout_height="40dp"
+        android:text="操作"
+        android:id="@+id/handleBtn"
+        android:layout_gravity="right|bottom"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="310dp"
+        android:visibility="gone" />
     <Button
         android:layout_width="55dp"
         android:layout_height="40dp"
