--- a/app/src/main/res/layout/sharing.xml
+++ b/app/src/main/res/layout/sharing.xml
@@ -113,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="借出时间"
+            android:text="可借天数"
             android:id="@+id/textView19"
             android:textSize="14sp"
             android:gravity="left|center_horizontal" />
